Fix dark mode selector for nav and breadcrumbs

--- a/src/css/dark-mode.css
+++ b/src/css/dark-mode.css
@@ -117,4 +117,5 @@ html[data-theme=dark] {
   /* home */
   --svg-dark-mode-filter: invert(100%) sepia(5%) saturate(100%) hue-rotate(181deg) brightness(100%) contrast(106%);
   --highlight-container-background: #262626;
+  --color-aliases-static-palette-text-secondary: var(--color-primitives-global-grey-grey-200);
 }
